# KumpelBrain

./: .gitignore  generateProtoFile.zsh  generate_stubs.zsh  pyrightconfig.json  requirements.txt
cpp/: CMakeLists.txt
cpp/network/: benchmark_main.cpp  setup.py
cpp/network/doc/: card_embedding_math.md
cpp/network/include/: AbilityEmbedding.h  AttackDataEmbedding.h  AttackEmbedding.h  AttentionUtils.h  CardAmountDataEmbedding.h  CardEmbedding.h  CardPositionEmbedding.h  CardStateEmbedding.h  ConditionEmbedding.h  DiscardDataEmbedding.h  EnergyTypeEmbedding.h  FilterConditionEmbedding.h  FilterEmbedding.h  GameStateEmbedding.h  InstructionDataEmbedding.h  InstructionEmbedding.h  MultiHeadAttention.h  Nesting.h  NormalizedLinear.h  PlayerStateEmbedding.h  PlayerTargetDataEmbedding.h  PositionalEmbedding.h  ReturnToDeckTypeDataEmbedding.h  SaveLoadMixin.h  SharedConstants.h  SharedEmbeddingHolder.h  TensorUtils.h
cpp/network/src/: AbilityEmbedding.cpp  AttackDataEmbedding.cpp  AttackEmbedding.cpp  AttentionUtils.cpp  CardAmountDataEmbedding.cpp  CardEmbedding.cpp  CardPositionEmbedding.cpp  CardStateEmbedding.cpp  ConditionEmbedding.cpp  DiscardDataEmbedding.cpp  EnergyTypeEmbedding.cpp  FilterConditionEmbedding.cpp  FilterEmbedding.cpp  GameStateEmbedding.cpp  InstructionDataEmbedding.cpp  InstructionEmbedding.cpp  MultiHeadAttention.cpp  Nesting.cpp  NormalizedLinear.cpp  PlayerStateEmbedding.cpp  PlayerTargetDataEmbedding.cpp  PositionalEmbedding.cpp  ReturnToDeckTypeDataEmbedding.cpp  SharedEmbeddingHolder.cpp  TensorUtils.cpp  bindings.cpp  positional_embedding_bindings.cpp  relation_embedding_note.md
cpp/network/src/serialization/: gamecore_serialization.pb.cc  gamecore_serialization.pb.h
python/: game_player.py  game_wrapper.py  main.py
python/game_logic_wrappers/: card_wrapper.py  csharp_runtime.py  game_controller_wrapper.py  interaction_wrapper.py
python/network/: attention_pooling.py  card_embedding.py  card_embedding_forward_fixtures.py  card_state_embedding_forward_fixtures.py  filter_test_data.py  generate_card_embedding_forward_goldens.py  instruction_test_data.py  instruction_testing.ipynb  multi_head_attention.py  nesting.py  positional_embedding.py  positional_embedding_test.ipynb  proto_serialization.py  save_load_mixin.py  test.ipynb  test_card_embedding_forward_golden.py  test_card_state_embedding_forward_golden.py  test_condition_embedding_cpp_parity.py  test_embedding_cpp_phase1.py  test_embedding_cpp_phase2.py  test_embedding_cpp_phase3.py  test_empty_embedding_batches_cpp.py  test_filter.ipynb  test_filter_embedding_cpp_parity.py  test_instruction_cpp_parity.py  test_multi_head_attention.ipynb  test_nesting_cpp_filter_parity.py  test_positional_embedding.ipynb  testing.ipynb
python/network/fixtures/: card_embedding_forward_golden_cpu.pt  card_embedding_forward_golden_cuda.pt  card_state_embedding_forward_golden_cpu.pt  card_state_embedding_forward_golden_cuda.pt
python/network/pytests/: generate_card_embedding_forward_goldens.py  generate_card_state_embedding_forward_goldens.py  test_card_embedding_forward_golden.py  test_card_state_embedding_forward_golden.py  test_condition_embedding_cpp_parity.py  test_embedding_cpp_phase1.py  test_empty_embedding_batches_cpp.py  test_filter_embedding_cpp_parity.py  test_instruction_cpp_parity.py  test_nesting_cpp_filter_parity.py  test_player_game_state_embedding_cpp.py  test_positional_embedding.ipynb
python/network/pytests/fixtures/: card_embedding_forward_golden_cpu.pt  card_embedding_forward_golden_cuda.pt  card_state_embedding_forward_golden_cpu.pt  card_state_embedding_forward_golden_cuda.pt
python/network/test/: generate_card_state_embedding_forward_goldens.py  test_empty_embedding_batches_cpp.py  test_filter_embedding_cpp_parity.py  test_instruction_cpp_parity.py
typings/: kumpel_embedding.pyi
